--- a/CommunicationJadeAgent/.classpath
+++ b/CommunicationJadeAgent/.classpath
@@ -6,5 +6,6 @@
 		</attributes>
 	</classpathentry>
 	<classpathentry kind="src" path="src"/>
+	<classpathentry kind="lib" path="C:/jade/jade.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
